# street-golf

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
examples/: fly_through.rs  shot_test.rs
src/: camera_follow.rs  collide.rs  course.rs  lib.rs  main.rs  physics.rs  round.rs  shot.rs
